# amanuensis

./: LICENSE  README.md  pyproject.toml
src/amanuensis/: __init__.py  cli.py  db.py  markdown.py  models.py
tests/: test_db.py  test_markdown.py
